  * Cope with dm-mod being built-in (e.g. custom kernels).
  * Merge from Ubuntu:
    - Check dmraid's exit code rather than parsing its output.
    - Use 'update-dev --settle' rather than 'update-dev' after loading
      modules (although not after installing new module packages, which may
      still require a trigger). Requires di-utils 1.66.

  [ Frans Pop ]
  * Install usbutils based on presence of /sys/bus/usb.

  [ Javier Fernández-Sanguino Peña ]
  * Fix Spanish translation. Closes: #510304

  [ Frans Pop ]
  * Remove myself as uploader.
  * Move hook scripts to directories to simplify including them.

 -- Frans Pop <fjp@debian.org>  Wed, 18 Mar 2009 21:10:22 +0100

hw-detect (1.71) unstable; urgency=low

  * Pass all_generic_ide as a plain boot option instead of with the value 1 as
    initramfs-tools ignores it otherwise. Whether or not initramfs-tools'
    behavior is correct is debatable.

 -- Frans Pop <fjp@debian.org>  Wed, 17 Dec 2008 20:54:19 +0100

hw-detect (1.70) unstable; urgency=low

  [ Frans Pop ]
  * The partman-dmraid component is no longer needed for Serial ATA RAID
    (dmraid) installations.

  [ Updated translations ]
  * Bengali (bn.po) by Mahay Alam Khan (মাহে আলম খান)
  * Bosnian (bs.po) by Armin Besirovic
  * Danish (da.po)
  * Esperanto (eo.po) by Felipe Castro
  * Latvian (lv.po) by Aigars Mahinovs
  * Macedonian (mk.po) by Arangel Angov
  * Slovenian (sl.po) by Vanja Cvelbar
  * Albanian (sq.po) by Elian Myftiu
  * Serbian (sr.po) by Veselin Mijušković
  * Ukrainian (uk.po) by Borys Yanovych

 -- Otavio Salvador <otavio@debian.org>  Sun, 21 Sep 2008 21:57:19 -0300

hw-detect (1.68) unstable; urgency=low

  [ Joey Hess ]
  * Fix libc6-i686 queuing on smp. Closes: #497863

  [ Jérémy Bobbio ]
  * check-missing-firmware: Don't ask for firmware files that have already
    been denied by the user in a previous question. Closes: #497395

  [ Updated translations ]
  * Catalan (ca.po) by Jordi Mallach