@@ -8,6 +8,8 @@ hw-detect (1.72) UNRELEASED; urgency=low
     - Use 'update-dev --settle' rather than 'update-dev' after loading
       modules (although not after installing new module packages, which may
       still require a trigger). Requires di-utils 1.66.
+    - Activate only non-degraded dmraid arrays (thanks, Luke Yelavich;
+      closes: #499482).
 
   [ Frans Pop ]
   * Install usbutils based on presence of /sys/bus/usb.
